[package]
name = "find_my_frog"
version = "0.1.0"
authors = ["Perl I. Weird <perlisweird@gmail.com>"]

[dependencies]
getopts = "0.2"
reqwest = "0.5.0"
rustc-serialize = "0.3"
log = "0.3.6"
time = "0.1"

[dependencies.irc]
# Disable SSL support good riddance
version = "0.11.6"
default-features = false
features =  ["ctcp", "encode"]
